deployment/k8s-base-layer-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-app
  labels:
    app: user-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-app
  template:
    metadata:
      labels:
        app: user-app
        gcp-auth-skip-secret: "true"
    spec:
      containers:
        - name: user-app
          image: us-central1-docker.pkg.dev/native-cloud-uniandes/native-cloud-2024-1/user-app:1.0
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
            - containerPort: 3000
          imagePullPolicy: Always

---
kind: Service
apiVersion: v1
metadata:
  name: user-app-service
  annotations:
    cloud.google.com/backend-config: '{"default": "user-health-config"}'
spec:
  type: NodePort
  selector:
    app: user-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: post-app
  labels:
    app: post-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: post-app
  template:
    metadata:
      labels:
        app: post-app
        gcp-auth-skip-secret: "true"
    spec:
      containers:
        - name: post-app
          image: us-central1-docker.pkg.dev/native-cloud-uniandes/native-cloud-2024-1/post-app:1.0
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
            - containerPort: 3001
          imagePullPolicy: Always

---
kind: Service
apiVersion: v1
metadata:
  name: post-app-service
  annotations:
    cloud.google.com/backend-config: '{"default": "post-health-config"}'
spec:
  type: NodePort
  selector:
    app: post-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3001

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: route-app
  labels:
    app: route-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: route-app
  template:
    metadata:
      labels:
        app: route-app
        gcp-auth-skip-secret: "true"
    spec:
      containers:
        - name: route-app
          image: us-central1-docker.pkg.dev/native-cloud-uniandes/native-cloud-2024-1/route-app:1.0
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
            - containerPort: 3002
          imagePullPolicy: Always

---
kind: Service
apiVersion: v1
metadata:
  name: route-app-service
  annotations:
    cloud.google.com/backend-config: '{"default": "route-health-config"}'
spec:
  type: NodePort
  selector:
    app: route-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3002

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: offer-app
  labels:
    app: offer-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: offer-app
  template:
    metadata:
      labels:
        app: offer-app
        gcp-auth-skip-secret: "true"
    spec:
      containers:
        - name: offer-app
          image: us-central1-docker.pkg.dev/native-cloud-uniandes/native-cloud-2024-1/offer-app:1.0
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
            - containerPort: 3003
          imagePullPolicy: Always

---
kind: Service
apiVersion: v1
metadata:
  name: offer-app-service
  annotations:
    cloud.google.com/backend-config: '{"default": "offer-health-config"}'
spec:
  type: NodePort
  selector:
    app: offer-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3003
