deployment/k8s-new-services-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: score-app
  labels:
    app: score-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: score-app
  template:
    metadata:
      labels:
        app: score-app
        gcp-auth-skip-secret: "true"
    spec:
      containers:
        - name: score-app
          image: us-central1-docker.pkg.dev/native-cloud-uniandes/native-cloud-2024-1/score-app:1.0
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
            - containerPort: 3004
          imagePullPolicy: Always

---
kind: Service
apiVersion: v1
metadata:
  name: score-app-service
  annotations:
    cloud.google.com/backend-config: '{"default": "score-health-config"}'
spec:
  type: NodePort
  selector:
    app: score-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3004

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rf003
  labels:
    app: rf003
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rf003
  template:
    metadata:
      labels:
        app: rf003
        gcp-auth-skip-secret: "true"
    spec:
      containers:
        - name: rf003
          image: us-central1-docker.pkg.dev/native-cloud-uniandes/native-cloud-2024-1/rf003:1.0
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
            - containerPort: 3005
          imagePullPolicy: Always

---
kind: Service
apiVersion: v1
metadata:
  name: rf003-service
  annotations:
    cloud.google.com/backend-config: '{"default": "rf003-health-config"}'
spec:
  type: NodePort
  selector:
    app: rf003
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3005

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rf004
  labels:
    app: rf004
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rf004
  template:
    metadata:
      labels:
        app: rf004
        gcp-auth-skip-secret: "true"
    spec:
      containers:
        - name: rf004
          image: us-central1-docker.pkg.dev/native-cloud-uniandes/native-cloud-2024-1/rf004:1.0
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
            - containerPort: 3006
          imagePullPolicy: Always

---
kind: Service
apiVersion: v1
metadata:
  name: rf004-service
  annotations:
    cloud.google.com/backend-config: '{"default": "rf004-health-config"}'
spec:
  type: NodePort
  selector:
    app: rf004
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3006

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rf005
  labels:
    app: rf005
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rf005
  template:
    metadata:
      labels:
        app: rf005
        gcp-auth-skip-secret: "true"
    spec:
      containers:
        - name: rf005
          image: us-central1-docker.pkg.dev/native-cloud-uniandes/native-cloud-2024-1/rf005:1.0
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
            - containerPort: 3007
          imagePullPolicy: Always

---
kind: Service
apiVersion: v1
metadata:
  name: rf005-service
  annotations:
    cloud.google.com/backend-config: '{"default": "rf005-health-config"}'
spec:
  type: NodePort
  selector:
    app: rf005
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3007
